2007-03-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/page.py (_on_project_*):
	Reload, change selection and focus only if rows is not empty.

2007-03-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol:
	* gaupol/_agents:
	* gaupol/_agents/test:
	* gaupol/base:
	* gaupol/base/test:
	* gaupol/files:
	* gaupol/files/test:
	* gaupol/gtk/_actions/test:
	* gaupol/gtk/_actions:
	* gaupol/gtk/_agents/test:
	* gaupol/gtk/_agents:
	* gaupol/gtk/cellrend/test:
	* gaupol/gtk/cellrend:
	* gaupol/gtk/conf/test:
	* gaupol/gtk/conf:
	* gaupol/gtk/dialogs/test:
	* gaupol/gtk/dialogs:
	* gaupol/gtk/test:
	* gaupol/gtk/unittest:
	* gaupol/gtk:
	* gaupol/tags/test:
	* gaupol/tags:
	* gaupol/test:
	* gaupol/unittest:
	Add ".hidden" to svn:ignore properties.

2007-03-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/_agents/close.py:
	Confirm close if file no longer exists.

2007-03-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/_agents/open.py (OpenAgent._select_files):
	If possible, set the filechooser directory to that of the current
	project's main file.

2007-03-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/conf/wrappers.py (Container):
	Set options as instance variables.

2007-03-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/search-dialog.glade:
	* gaupol/gtk/dialogs/search.py:
	Fix initial focus.

2007-03-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/search.py:
	Set cursor busy for "Replace All".

2007-03-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/search.py:
	Fix text view scrolling.

2007-03-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/search-dialog.glade:
	* gaupol/_agents/search.py:
	* gaupol/_agents/set.py:
	* gaupol/gtk/_actions/text.py:
	* gaupol/gtk/_agents/edit.py:
	* gaupol/gtk/_agents/search.py:
	* gaupol/gtk/app.py:
	* gaupol/gtk/dialogs/__init__.py:
	* gaupol/gtk/dialogs/search.py:
	* gaupol/gtk/lengthlib.py:
	* gaupol/gtk/page.py:
	Add search. Closes #6690.
