@@ -1,5 +1,16 @@
 2007-03-09  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* gaupol/gtk/app.py:
+	* gaupol/gtk/conf/__init__.py:
+	* gaupol/gtk/dialogs/about.py:
+	* gaupol/gtk/main.py:
+	* gaupol/gtk/paths.py:
+	* gaupol/gtk/util.py:
+	Do not read the default configuration file upon the import of
+	gaupol.gtk.conf.
+
+2007-03-09  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* gaupol/gtk/page.py (_on_project_*):
 	Reload, change selection and focus only if rows is not empty.
 
